# Chip8_Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  build.zig.zon  chip8  meson.build  notes.txt  run.bat  temp  temp.cpp
include/: chip8.h  window.h
src/: CMakeLists.txt  chip8.cpp  instructions.cpp  main.cpp  window.cpp
